...
extension Exercise.Language {
    public var displayName: String {
        switch self {
        case .deutsch:
            return "Deutsch"
        case .english:
            return "English"
        case .bulgarian:
            return "Bulgarian"
        case .spanish:
            return "Spanish"
        case .russian:
            return "Russian"
        case .nederlands:
            return "Nederlands"
...
