...
        // Do any additional setup after loading the view.
        prepareView()
        bindViewModelToView()
    }
    
    private func prepareView() {
        title = "Exercises"
        setupExerciseTableView()
        viewModel.fetchExercise(refreshing: false)
    }

    private func bindViewModelToView() {
       
...
        }.store(in: &cancellable)
        
        
    }
    
    private func setupExerciseTableView() {
        tableViewExercises.accessibilityIdentifier = "exerciseTableView"
        tableViewExercises.dataSource = self
        tableViewExercises.delegate = self
        labelExercisePlaceholder.isHidden = true
        let refreshController = UIRefreshControl()
        tableViewExercises.refreshControl = refreshController
        refreshController.addTarget(self, action: #selector(refreshExerciseList), for: .valueChanged)
...
