...
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </tableView>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="PoB-x2-yGK">
                                <rect key="frame" x="178" y="420" width="37" height="37"/>
                                <color key="color" systemColor="systemOrangeColor"/>
                            </activityIndicatorView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No exercise found." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CPR-VF-dEC">
                                <rect key="frame" x="113" y="414" width="167" height="24"/>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                <color key="textColor" systemColor="placeholderTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
...
